--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,35 +1,35 @@
-# name: Complete Build Workflow - Test, Lint
+name: Complete Build Workflow - Test, Lint
 
-# on:
-#   push:
-#     branches:
-#       - '*'
-#   pull_request:
-#     branches:
-#       - main
-#   workflow_dispatch:
+on:
+  push:
+    branches:
+      - '*'
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
 
-# jobs:
+jobs:
     
-#   lint: #PYLINT
-#     runs-on: ubuntu-latest
+  lint: #PYLINT
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-#       - name: Set up Python 3.11
-#         uses: actions/setup-python@v3
-#         with:
-#           python-version: '3.11'
-#           cache: 'pip'
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.11'
+          cache: 'pip'
 
-#       - name: Install dependencies
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install -r requirements.txt
-#           pip install pylint
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pylint
 
-#       - name: Run pylint
-#         run: |
-#           pylint --fail-under=8 $(git ls-files '*.py')
+      - name: Run pylint
+        run: |
+          pylint --fail-under=8 $(git ls-files '*.py')
