--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -55,6 +55,8 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
+          git pull
           git add .github/badges/pylint.svg
+          git checkout main
           git commit -m "Update pylint badge" || echo "No changes to commit"
           git push || echo "No changes to push"
