--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,92 +1,63 @@
-# name: Complete Build Workflow - Test, Lint
+name: Test Workflow
 
-# on:
-#   push:
-#     branches:
-#       - '*'
-#   pull_request:
-#     branches:
-#       - main
-#   workflow_dispatch:
+on:
+  push:
+    branches:
+      - '*'
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
 
-# jobs:
-  
-#   test: #PYTEST
-#     runs-on: ubuntu-latest
-    
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v3
+jobs:
+  test:
+    runs-on: ubuntu-latest
 
-#       - name: Set up Python 3.11
-#         uses: actions/setup-python@v3
-#         with:
-#           python-version: '3.11'
-#           cache: 'pip'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-#       - name: Install dependencies
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install pytest pylint
-#           for FILE in $(find . -name 'requirements.txt'); do
-#             pip install -r $FILE
-#           done
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
 
-#       - name: Run pytest
-#         run: pytest
-#         continue-on-error: true
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
 
-#       - name: Parse pytest results to calculate success percentage
-#         id: calculate_percentage
-#         run: |
-#           total=$(grep -oP '(?<=tests=")[0-9]+' pytest-results.xml)
-#           failures=$(grep -oP '(?<=failures=")[0-9]+' pytest-results.xml)
-#           errors=$(grep -oP '(?<=errors=")[0-9]+' pytest-results.xml)
-#           skips=$(grep -oP '(?<=skipped=")[0-9]+' pytest-results.xml)
-#           passed=$((total - failures - errors - skips))
-#           percentage=$((100 * passed / total))
-#           echo "Total tests: $total"
-#           echo "Passed: $passed"
-#           echo "Percentage: $percentage%"
-#           echo "::set-output name=percentage::$percentage"
-  
-  
-#   badge: 
-#     needs: [test]
-#     runs-on: ubuntu-latest
-#     steps: 
-#       - name: Checkout Repository 
-#         uses: actions/checkout@v4
-      
-#       # Create the directory where badges will be saved, if needed
-#       - name: Create destination directory for badge
-#         env:
-#           BADGE_PATH: .github/badges/test.svg
-#         run: mkdir -p "${BADGE_PATH%/*}"
-#       # Display build completed 
-#       - name: Generate the badge SVG image
-#         uses: emibcn/badge-action@v1
-#         id: test_badge
-#         with:
-#           label: 'Pytest pass rate'
-#           status: '${{ needs.test.outputs.percentage }}%'
-#           color: 'blue'
-#           path: .github/badges/test.svg
-#           scale: 1.5
-    
-#       - name: Upload badge as artifact
-#         uses: actions/upload-artifact@v3
-#         with:
-#           name: badge
-#           path: .github/badges/test.svg
-#           if-no-files-found: ignore
-     
-#       - name: Committing logs and badge to the repository
-#         run: |
-#           git config --global user.name "github-actions"
-#           git config --global user.email "actions@github.com"
-#           git pull
-#           git add .github/badges/test.svg
-#           git checkout main
-#           git diff-index --quiet HEAD || git commit -am "Update Complete build"
-#           git push
+      - name: Run pytest and save results
+        id: pytest
+        run: |
+          pytest --maxfail=1 --disable-warnings --tb=short > pytest-report.txt || true
+          total_tests=$(grep -oP '(?<=collected )\d+(?= tests)' pytest-report.txt)
+          passed_tests=$(grep -oP '(?<=passed=)\d+' pytest-report.txt)
+          percentage=$(echo "scale=2; $passed_tests/$total_tests*100" | bc)
+          echo "PYTEST_PERCENTAGE=$percentage" >> $GITHUB_ENV
+
+      - name: Generate pytest badge
+        run: |
+          mkdir -p .github/badges
+          percentage=${{ env.PYTEST_PERCENTAGE }}
+          color="green"
+          if (( $(echo "$percentage < 80" | bc -l) )); then
+            color="yellow"
+          fi
+          if (( $(echo "$percentage < 50" | bc -l) )); then
+            color="red"
+          fi
+          echo '<svg xmlns="http://www.w3.org/2000/svg" width="120" height="20" role="img" aria-label="Pytest Percentage"><linearGradient id="a" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><rect rx="3" width="120" height="20" fill="#555"/><rect rx="3" x="60" width="60" height="20" fill="'$color'"/><path fill="'$color'" d="M60 0h4v20h-4z"/><rect rx="3" width="120" height="20" fill="url(#a)"/><g fill="#fff" text-anchor="middle" font-family="Verdana,DejaVu Sans,sans-serif" font-size="11"><text x="30" y="15" fill="#010101" fill-opacity=".3">Pytest</text><text x="30" y="14">Pytest</text><text x="90" y="15" fill="#010101" fill-opacity=".3">'$percentage'%</text><text x="90" y="14">'$percentage'%</text></g></svg>' > .github/badges/pytest.svg
+
+      - name: List generated files for debugging
+        run: ls -R .github/badges
+
+      - name: Commit badge
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git pull
+          git add .github/badges/pytest.svg
+          git commit -m "Update pytest badge" || echo "No changes to commit"
+          git push || echo "No changes to push"
