--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,43 +26,39 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest
 
-      - name: Run pytest and save results
+      - name: Run pytest
         id: pytest
         run: |
-          pytest --maxfail=1 --disable-warnings --tb=short > pytest-report.txt || true
-          total_tests=$(grep -oP '(?<=collected )\d+(?= tests)' pytest-report.txt)
-          passed_tests=$(grep -oP '(?<=passed=)\d+' pytest-report.txt)
-          echo "PYTEST_PASSED=$passed_tests" >> $GITHUB_ENV
-          echo "PYTEST_TOTAL=$total_tests" >> $GITHUB_ENV
+          pytest > test-results.txt || true
+          pass_count=$(grep -oP '(?<== )\d+(?= passed)' test-results.txt || echo "0")
+          fail_count=$(grep -oP '(?<== )\d+(?= failed)' test-results.txt || echo "0")
+          skip_count=$(grep -oP '(?<== )\d+(?= skipped)' test-results.txt || echo "0")
+          total_count=$((pass_count + fail_count + skip_count))
+          echo "PASS_COUNT=$pass_count" >> $GITHUB_ENV
+          echo "TOTAL_COUNT=$total_count" >> $GITHUB_ENV
 
-      - name: Generate pytest badge
+      - name: Generate test badge
         run: |
           mkdir -p .github/badges
-          passed_tests=${{ env.PYTEST_PASSED }}
-          total_tests=${{ env.PYTEST_TOTAL }}
+          pass_count=${{ env.PASS_COUNT }}
+          total_count=${{ env.TOTAL_COUNT }}
           color="green"
-          
-          # Set color based on the number of passed tests out of total tests
-          if (( passed_tests < total_tests * 0.8 )); then
+          if [ "$pass_count" -lt "$total_count" ]; then
             color="yellow"
           fi
-          if (( passed_tests < total_tests * 0.5 )); then
+          if [ "$pass_count" -eq "0" ]; then
             color="red"
           fi
-
-          # Create badge with passing tests/total tests
-          echo '<svg xmlns="http://www.w3.org/2000/svg" width="120" height="20" role="img" aria-label="Pytest Results"><linearGradient id="a" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><rect rx="3" width="120" height="20" fill="#555"/><rect rx="3" x="60" width="60" height="20" fill="'$color'"/><path fill="'$color'" d="M60 0h4v20h-4z"/><rect rx="3" width="120" height="20" fill="url(#a)"/><g fill="#fff" text-anchor="middle" font-family="Verdana,DejaVu Sans,sans-serif" font-size="11"><text x="30" y="15" fill="#010101" fill-opacity=".3">Pytest</text><text x="30" y="14">Pytest</text><text x="90" y="15" fill="#010101" fill-opacity=".3">'$passed_tests'/'$total_tests'</text><text x="90" y="14">'$passed_tests'/'$total_tests'</text></g></svg>' > .github/badges/pytest.svg
+          echo '<svg xmlns="http://www.w3.org/2000/svg" width="150" height="20" role="img" aria-label="Test Results"><linearGradient id="a" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><rect rx="3" width="150" height="20" fill="#555"/><rect rx="3" x="90" width="60" height="20" fill="'$color'"/><path fill="'$color'" d="M90 0h4v20h-4z"/><rect rx="3" width="150" height="20" fill="url(#a)"/><g fill="#fff" text-anchor="middle" font-family="Verdana,DejaVu Sans,sans-serif" font-size="11"><text x="45" y="15" fill="#010101" fill-opacity=".3">Tests</text><text x="45" y="14">Tests</text><text x="120" y="15" fill="#010101" fill-opacity=".3">'$pass_count'/'$total_count'</text><text x="120" y="14">'$pass_count'/'$total_count'</text></g></svg>' > .github/badges/test.svg
 
       - name: List generated files for debugging
         run: ls -R .github/badges
 
-      - name: Commit badge
+      - name: Commit test badge
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git pull
-          git add .github/badges/pytest.svg
-          git commit -m "Update pytest badge" || echo "No changes to commit"
+          git add .github/badges/test.svg
+          git commit -m "Update test results badge" || echo "No changes to commit"
           git push || echo "No changes to push"
