--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -58,8 +58,8 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add .github/badges/test.svg
-          git commit -m "Update test results badge" || echo "No changes to commit"
+          git add .github/badges/pylint.svg
+          git commit -m "Update pylint results badge" || echo "No changes to commit"
           git push || echo "No changes to push"
     
   test:
