--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -79,8 +79,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          find . -name "requirements.txt" -exec pip install -r {} +
-          pip install pylint
+          pip install pytest
 
       - name: Run pytest
         id: pytest
