--- a/pipeline/Dockerfile
+++ b/pipeline/Dockerfile
@@ -1,12 +1,10 @@
-FROM python:latest
+FROM public.ecr.aws/lambda/python:3.8
+
+WORKDIR ${LAMBDA_TASK_ROOT}
 
 COPY requirements.txt .
+RUN pip3 install -r requirements.txt
 
-RUN pip install -r requirements.txt
-
-COPY extract.py .
-COPY transform.py .
-COPY load.py .
 COPY etl.py .
 
-CMD ["python", "etl.py"]
+CMD [ "etl.lambda_handler" ]
