--- a/pipeline/Dockerfile
+++ b/pipeline/Dockerfile
@@ -1,4 +1,4 @@
-FROM public.ecr.aws/lambda/python:3.8
+FROM public.ecr.aws/lambda/python:latest
 
 WORKDIR ${LAMBDA_TASK_ROOT}
 
@@ -6,5 +6,8 @@ COPY requirements.txt .
 RUN pip3 install -r requirements.txt
 
 COPY etl.py .
+COPY extract.py .
+COPY transform.py .
+COPY load.py .
 
 CMD [ "etl.lambda_handler" ]
