Set up pipeline on cloud, added ecr URI, updated etl for lambda_handler

--- a/.gitignore
+++ b/.gitignore
@@ -87,10 +87,11 @@ __pycache__
 venv/
 .pytest_cache
 
-.terraform
+.terraform*
+*.tfvars
+*.tfstate*
 
 .venv
 .env
-terraform.tfvars
 *.csv
 .coverage
