--- a/dashboard/dockerfile
+++ b/dashboard/dockerfile
@@ -4,7 +4,7 @@ COPY requirements.txt .
 RUN pip3 install -r requirements.txt
 
 COPY streamlit.py .
-COPY queries.py .
+COPY db_queries.py .
 
 EXPOSE 8501
 CMD ["streamlit", "run", "streamlit.py", , "--server.port=8501"]
