--- a/dashboard/dockerfile
+++ b/dashboard/dockerfile
@@ -7,4 +7,4 @@ COPY dashboard.py .
 COPY db_queries.py .
 
 EXPOSE 8501
-CMD ["streamlit", "run", "dashboard.py", , "--server.port=8501"]
+CMD ["streamlit", "run", "dashboard.py", "--server.port=8501"]
